# Wonderland

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  meson.build  meson_options.txt  package-lock.json  package.json
.github/workflows/: CI.yml  test.yml
.husky/: pre-push
.opencode/plans/: alice_query_v1_spec.md  pong_alice_query_design.md
alice/: Cargo.toml
alice/docs/: spec.md
alice/src/: driver.rs  lib.rs  main.rs
alice/src/compiler/: alice.rs  config.rs  run_alice.rs
alice/src/source/: mod.rs  span.rs
alice/src/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
benchmark/: meson.build
docs/: roadmap.md
docs/alice/: query_proposal_ai.md  spec.md  zen.md
docs/alice/examples/: 01_types.alice  02_movement.alice  03_bounds_despawn.alice  04_collision.alice  README.md  pong.alice
docs/ref/: Doxyfile.in
include/: Wonderland.h
include/Wonderland/: Driver.hpp  Engine.hpp
include/Wonderland/ADT/: SparseMap.h  SparseMap.hpp
include/Wonderland/IPS/: Id.h  Id.hpp  Registry.h  Registry.hpp
libs/: meson.build
libs/stdx/: meson.build
libs/stdx/src/: meson.build  xstr.c
libs/stdx/test/collections/: meson.build  test_vec.c
libs/wecs/: meson.build
src/: main.c  main.cpp  meson.build
src/ADT/: SparseMap.cpp  meson.build
src/Driver/: Driver.cpp  meson.build
src/IPS/: Id.cpp  Registry.cpp  meson.build
subprojects/: .gitignore
test/IPS/: RegistryTest.cpp
tests/: meson.build
tests/ECS/: RegistryTest.cpp  SparseSetTest.cpp
tests/IPS/: RegistryTest.cpp
tools/: meson.build
tools/Alice/: Alice.g4  meson.build
(+16 files in other folders)
